--- a/style.css
+++ b/style.css
@@ -43,11 +43,11 @@ a, a:link, a:visited, a:hover {
 }
 
 #exit li.linkedin a:hover {
-	background-color: #007FB1;
+	background-color: #0077B5;
 }
 
 #exit li.twitter a:hover {
-	background-color: #00ACED;
+	background-color: #55ACEE;
 }
 
 #exit li.lastfm a:hover {
@@ -55,11 +55,11 @@ a, a:link, a:visited, a:hover {
 }
 
 #exit li.goodreads a:hover {
-	background-color: #5A471B;
+	background-color: #663300;
 }
 
 #exit li.github a:hover {
-	background-color: #4183C4;
+	background-color: #181717;
 }
 
 @keyframes exitchange {
