adds jekyll and a shitty partybus page
Squashed commit of the following:

commit ca92c252dfcd64f17e4d91c2f6e96d885beb74c1
Author: Nicole Montano <nicolysis@gmail.com>
Date:   Wed Jun 8 03:29:51 2016 -0500

    bullet points instead of sentences

commit ff02bb5521053d3150b773da8250a8c8db9a6b64
Author: Nicole Montano <nicolysis@gmail.com>
Date:   Wed Jun 8 03:29:31 2016 -0500

    adds aside style

commit 40a0ed836972111ee65d702e3966c157f7324233
Author: Nicole Montano <nicolysis@gmail.com>
Date:   Mon Jun 6 22:41:08 2016 -0500

    lol partybus

    omg

commit 14bbb94d6a9bcc33fc970e3d8584f100742fa7d9
Author: Nicole Montano <nicolysis@gmail.com>
Date:   Mon Jun 6 22:02:27 2016 -0500

    jekyll

--- a/style.css
+++ b/style.css
@@ -30,7 +30,10 @@ a, a:link, a:visited, a:hover {
   position: fixed;
   top: 1.2em;
   bottom: 1.2em;
+}
 
+p {
+  padding-top: 15px;
 }
 
 #exit {
