--- a/style.css
+++ b/style.css
@@ -25,11 +25,20 @@ a, a:link, a:visited, a:hover {
   text-decoration: none;
 }
 
-#content {
+#container {
   width: 100%;
+  overflow-y: auto;
   position: fixed;
   top: 1.2em;
   bottom: 1.2em;
+}
+
+#content {
+  width: 60%;
+  text-align: justify;
+  position: absolute;
+  left: 20%;
+  right: 20%;
 }
 
 p {
@@ -39,8 +48,8 @@ p {
 #exit {
   overflow: hidden;
   text-align: center;
-  position: relative;
-  top: 40%;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 #exit li {
