--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 /* hi */
 
-@import url(http://fonts.googleapis.com/css?family=Roboto);
+@import url(http://fonts.googleapis.com/css?family=Muli|Cardo);
 
 /* whitespace */
 
@@ -18,7 +18,7 @@ body {
 /* text */
 
 body { 
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  font-family: 'Cardo', serif;
   font-size: 24px;
 }
 
@@ -41,7 +41,7 @@ a, a:link, a:visited, a:hover {
 p { padding-top: 15px; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: serif;
+  font-family: 'Muli', Helvetica, Arial, sans-serif;
   font-weight: 800;
 }
 
@@ -49,7 +49,6 @@ h1 { font-size: 200%; }
 h1.name {
   line-height: 1.5em;
   text-align: center;
-  font-style: italic;
   text-transform: capitalize;
 }
 
@@ -63,7 +62,6 @@ h5 { font-size: 100%; }
 
 h6 { 
   font-size: 70%;
-  font-family: 'Roboto', Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   letter-spacing: 3px;
 }
@@ -91,6 +89,11 @@ h6 {
 
 #content li {
   list-style-position: inside;
+  margin-left: 15px;
+}
+
+#content ul li {
+  list-style-type: circle;
 }
 
 #exit {
