--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>{{ page.title }}</title>
-    <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <link href="{{ "assets/main.css" | relative_url }}" rel="stylesheet" type="text/css">
  </head>
   <body>
 
