--- a/assets/main.css
+++ b/assets/main.css
@@ -122,38 +122,38 @@ h6 {
 }
 
 #exit li.linkedin svg {
-  mask: url('/images/linkedin.svg');
-  -webkit-mask: url('/images/linkedin.svg');
+  mask: url('/assets/linkedin.svg');
+  -webkit-mask: url('/assets/linkedin.svg');
 }
 #exit li.linkedin svg:hover { background-color: #0077B5; }
 
 #exit li.twitter svg {
-  mask: url('/images/twitter.svg');
-  -webkit-mask: url('/images/twitter.svg');
+  mask: url('/assets/twitter.svg');
+  -webkit-mask: url('/assets/twitter.svg');
 }
 #exit li.twitter svg:hover { background-color: #55ACEE; }
 
 #exit li.lastfm svg {
-  mask: url('/images/lastfm.svg');
-  -webkit-mask: url('/images/lastfm.svg');
+  mask: url('/assets/lastfm.svg');
+  -webkit-mask: url('/assets/lastfm.svg');
 }
 #exit li.lastfm svg:hover { background-color: #D51007; }
 
 #exit li.goodreads svg {
-  mask: url('/images/goodreads.svg');
-  -webkit-mask: url('/images/goodreads.svg');
+  mask: url('/assets/goodreads.svg');
+  -webkit-mask: url('/assets/goodreads.svg');
 }
 #exit li.goodreads svg:hover { background-color: #663300; }
 
 #exit li.github svg {
-  mask: url('/images/github.svg');
-  -webkit-mask: url('/images/github.svg');
+  mask: url('/assets/github.svg');
+  -webkit-mask: url('/assets/github.svg');
 }
 #exit li.github svg:hover { background-color: #181717; }
 
 #exit li.trakt svg {
-  mask: url('/images/trakt.svg');
-  -webkit-mask: url('/images/trakt.svg');
+  mask: url('/assets/trakt.svg');
+  -webkit-mask: url('/assets/trakt.svg');
 }
 #exit li.trakt svg:hover { background-color: #ED1C24; }
 
