Minor formatting changes
So smalllll

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     <nav>&nbsp;</nav>
     <div id="container">
-      <h1 class="name">{{ site.data.about.name }}</h1>
+      <h1 class="name center">{{ site.data.about.name }}</h1>
       <div id="content">
         {{ content }}
       </div>
