--- a/assets/main.css
+++ b/assets/main.css
@@ -40,6 +40,10 @@ a, a:link, a:visited, a:hover {
 
 p { padding-top: 15px; }
 
+.center {
+  text-align: center;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Muli', Helvetica, Arial, sans-serif;
   font-weight: 800;
@@ -48,7 +52,6 @@ h1, h2, h3, h4, h5, h6 {
 h1 { font-size: 200%; }
 h1.name {
   line-height: 1.5em;
-  text-align: center;
   text-transform: capitalize;
 }
 
