--- a/assets/main.css
+++ b/assets/main.css
@@ -44,6 +44,10 @@ p { padding-top: 15px; }
   text-align: center;
 }
 
+.right {
+  text-align: right;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Muli', Helvetica, Arial, sans-serif;
   font-weight: 800;
@@ -185,6 +189,7 @@ h6 {
 }
 
 nav, footer {
+  font-family: 'Muli', Helvetica, Arial, sans-serif;
   position: fixed;
   width: 100%;
   background-color: #000000;
@@ -195,5 +200,9 @@ nav, footer {
 }
 
 nav { top: 0px; }
+nav li {
+  display: inline;
+  list-style-type: none;
+}
 
 footer { bottom: 0px; }
