I forgot to put on my hat

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
       {% for sitepage in site.pages %}
         {% if sitepage.title %}
           <li><a href="{{ sitepage.url }}">{{ sitepage.title }}</a></li>
+        {% else %}
+          &nbsp;
         {% endif %}
       {% endfor %}
     </nav>
