Remove link from bottom

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         {{ content }}
       </div>
     </div>
-    <footer><a href="{{ site.github_project | prepend: "https://github.com/" }}">i made dis</a></footer>
+    <footer>&nbsp;</footer>
 
   </body>
 </html>
