--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,7 @@
 
 /* hi */
 
-@import url(http://fonts.googleapis.com/css?family=Muli|Cardo);
+@import url(https://fonts.googleapis.com/css?family=Muli|Cardo);
 
 /* whitespace */
 
