--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
-    <link href="{{ "assets/main.css" | relative_url }}" rel="stylesheet" type="text/css">
+    <link href="{{ "assets/css/main.css" | relative_url }}" rel="stylesheet" type="text/css">
   </head>
   <body>
 
