--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -1,7 +1,19 @@
 ---
 ---
 
-@import "{{ site.stylescheme }}"
+@import "{{ site.font-stack }}"
+@import "{{ site.colorscheme }}"
+@import url(syntax.css)
+
+$bg: $silver
+$fg: $black
+
+$linkedin: #0077B5
+$twitter: #55ACEE
+$lastfm: #D51007
+$goodreads: #663300
+$github: #181717
+$trakt: #ED1C24
 
 /* whitespace */
 
@@ -16,7 +28,7 @@ body
 
 body
   font-family: $serif
-  font-size: 24px
+  font-size: 26px
 
 /* colors */
 
@@ -32,7 +44,7 @@ a, a:link, a:visited, a:hover
   font-size: inherit
   text-decoration: none
 p
-  padding-top: 15px
+  margin-top: 1.0em
 
 .center
   text-align: center
@@ -41,6 +53,7 @@ p
 
 h1, h2, h3, h4, h5, h6
   font-family: $sansserif
+  margin-top: 1.0em
   font-weight: 800
 h1
   font-size: 200%
@@ -59,6 +72,14 @@ h6
   font-size: 70%
   text-transform: uppercase
   letter-spacing: 3px
+
+code
+  font-family: $monospace
+  font-size: inherit
+
+pre
+  margin: 0 15% 0 15%
+  padding: 3px
 
 #container
   width: 100%
