--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
 <div id="exit">
 <ul>
 {% for item in site.data.exitlinks %}
-    <li class="{{ item.name }}"><a href="{{ item.url }}"><svg class="{{ item.name }}"></svg></a></li>
+<li class="{{ item.name }}"><a href="{{ item.url }}" alt="{{ item.name }}"><svg class="{{ item.name }}"></svg></a></li>
 {% endfor %}
 </ul>
 </div>
