Add analytics tracking code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,15 @@
 
 <html>
   <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55055506-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-55055506-2');
+    </script>
     <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
     <link href="{{ "assets/css/main.css" | relative_url }}" rel="stylesheet" type="text/css">
   </head>
