Add exit link to Gitea

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -14,6 +14,7 @@ $lastfm: #D51007
 $goodreads: #663300
 $github: #181717
 $trakt: #ED1C24
+$gitea: #6CC644
 
 /* whitespace */
 
@@ -156,6 +157,12 @@ pre
   -webkit-mask: url('/assets/trakt.svg')
 #exit li.trakt svg:hover
   background-color: $trakt
+
+#exit li.gitea svg
+  mask: url('/assets/gitea.svg')
+  -webkit-mask: url('/assets/gitea.svg')
+#exit li.gitea svg:hover
+  background-color: $gitea
 
 @keyframes exitchange
   from
