--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -29,7 +29,7 @@ body
 
 body
   font-family: $serif
-  font-size: 26px
+  font-size: 28px
 
 /* colors */
 
@@ -79,7 +79,7 @@ code
   font-size: inherit
 
 pre
-  margin: 0 15% 0 15%
+  margin: 0 0 0 0
   padding: 3px
 
 #container
@@ -90,12 +90,13 @@ pre
   bottom: 1.2em
 
 #content
-  width: 60%
+  width: 40%
+  min-width: 650px
   font-size: 18px
   text-align: justify
   position: absolute
-  left: 20%
-  right: 20%
+  left: 30%
+  right: 30%
 #content a
   text-decoration: underline
 #content li
