--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -8,7 +8,7 @@
 $bg: $silver
 $fg: $black
 
-$exitlinks: ("linkedin": #0077B5, "twitter": #55ACEE, "lastfm": #D51007, "goodreads": #663300, "github": #181717, "trakt": #ED1C24, "gitea": #6CC644, "keybase": #33A0FF)
+$exitlinks: ("linkedin": #0077B5, "twitter": #55ACEE, "lastfm": #D51007, "goodreads": #663300, "github": #181717, "trakt": #ED1C24, "gitea": #6CC644, "keybase": #33A0FF, "exercism": #009CAB)
 
 /* whitespace */
 
