--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -45,6 +45,8 @@ p
   text-align: center
 .right
   text-align: right
+.left
+  text-align: left
 
 h1, h2, h3, h4, h5, h6
   font-family: $sansserif
@@ -87,7 +89,7 @@ pre
   width: 40%
   min-width: 650px
   font-size: 18px
-  text-align: justify
+  text-align: left
   position: absolute
   left: 30%
   right: 30%
@@ -95,18 +97,19 @@ pre
   text-decoration: underline
 #content li
   list-style-position: inside
-  margin-left: 15px
+  margin-right: 15px
 #content ul li
   list-style-type: circle
 
 #exit
   overflow: hidden
-  text-align: center
   margin-top: 15px
   margin-bottom: 15px
 #exit li
   display: inline
   list-style-type: none
+#exit ul li a
+  text-decoration: underline
 #exit li svg
   transition: background-color 1s
   -webkit-transition: background-color 1s
