--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -84,15 +84,14 @@ pre
   position: fixed
   top: 1.2em
   bottom: 1.2em
+  left: 1.2em
+  right: 1.2em
 
 #content
   width: 40%
   min-width: 650px
   font-size: 18px
-  text-align: left
   position: absolute
-  left: 30%
-  right: 30%
 #content a
   text-decoration: underline
 #content li
