--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
   <body>
 
     <div id="container">
-      <h1 class="name center"><a href="{{ site.url }}">{{ site.data.about.name }}</a></h1>
-      <div class="center" id="content">
+      <h1 class="name"><a href="{{ site.url }}">{{ site.data.about.name }}</a></h1>
+      <div id="content">
         {{ content }}
         <div id="exit">
         <ul>
